force-app/main/default/objects/Old_Vehicle_Details__c/Old_Vehicle_Details__c.object-meta.xml
<CustomObject>
    <label>Old Vehicle Details</label>
    <nameField>
        <label>Old Vehicle Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Old Vehicle Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>