force-app/main/default/objects/Old_Vehicle_Details__c/fields/Asset_Make__c.field-meta.xml
<CustomField>
    <fullName>Asset_Make__c</fullName>
    <label>Asset Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>