force-app/main/default/objects/Old_Vehicle_Details__c/fields/Free_Fin__c.field-meta.xml
<CustomField>
    <fullName>Free_Fin__c</fullName>
    <label>Free / Fin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Fin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>