force-app/main/default/objects/Old_Vehicle_Details__c/fields/Loan_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Loan_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Applicant</label>
    <referenceTo>Loan_Applicant__c</referenceTo>
    <relationshipLabel>Old Vehicle Details</relationshipLabel>
    <relationshipName>Old_Vehicle_Details</relationshipName>
    <type>Lookup</type>
</CustomField>