force-app/main/default/objects/Old_Vehicle_Details__c/fields/New_Used__c.field-meta.xml
<CustomField>
    <fullName>New_Used__c</fullName>
    <label>New / Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>