force-app/main/default/objects/Old_Vehicle_Details__c/fields/RC_date_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>RC_date_Transfer_Date__c</fullName>
    <label>RC date / Transfer Date</label>
    <type>Date</type>
</CustomField>