force-app/main/default/objects/Old_Vehicle_Details__c/fields/Total_EMI_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_EMI_Paid__c</fullName>
    <label>Total EMI Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>