force-app/main/default/objects/Old_Vehicle_Details__c/fields/Vehicle_Regn_No__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Regn_No__c</fullName>
    <label>Vehicle Regn No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>